Demo DataSource/Terraform for aws/AWS VPC/create_instance.tf

resource "aws_key_pair" "levelup_key" {
    key_name = "levelup_key"
    public_key = file(var.PATH_TO_PUBLIC_KEY)
}

resource "aws_instance" "MyFirstInstnace" {
  ami           = lookup(var.AMIS, var.AWS_REGION)
  instance_type = "t2.micro"
  key_name      = aws_key_pair.levelup_key.key_name

  tags = {
    Name = "custom_instance"
  }
  vpc_security_group_ids = [aws_security_group.my_sg].id
  subnet_id = aws_subnet.public_subnet2.id
}
